2015-01-05 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/InputController.h
	Make tabCompletion just an NSArray

	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionController.m
	* Output/GNUstepOutput/Controllers/InputController.m
	Fix warning.

2013-11-21 Riccardo Mottola <rm@gnu.org>

	* InFilters/DCCSupport/GNUmakefile
	* InFilters/Debold/GNUmakefile
	* InFilters/Decolorizer/GNUmakefile
	* InFilters/Dereverse/GNUmakefile
	* InFilters/Deunderline/GNUmakefile
	* InFilters/Emoticon/GNUmakefile
	* InFilters/Highlighting/GNUmakefile
	* InFilters/KeepAlive/GNUmakefile
	* InFilters/Logging/GNUmakefile
	* InFilters/MessageInTab/GNUmakefile
	* InFilters/MessageOutTab/GNUmakefile
	* InFilters/PrivateBeep/GNUmakefile
	* InFilters/Skeleton/GNUmakefile
	* Input/NetclassesInput/GNUmakefile
	* OutFilters/Colorizer/GNUmakefile
	* OutFilters/Piper/GNUmakefile
	* OutFilters/Skeleton/GNUmakefile
	* Output/GNUstepOutput/GNUmakefile
	* Source/Defaults.plist
	* TalkSoupBundles/GNUmakefile
	Install bundles inside App resources, name bundles with .bundle extensions and update defaults accordingly.
	(Remember to delete your defaults)

2013-09-15 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefile
	* Source/TalkSoupInfo.plist
	* Output/GNUstepOutput/AllLanguages/Defaults.plist
	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerCtcp.m
	GAP branding

2013-09-13 Riccardo Mottola <rm@gnu.org>

	* InFilters/DCCSupport/DCCSupport.m
	* InFilters/Emoticon/Emoticon.m
	* InFilters/KeepAlive/KeepAlive.m
	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m
	Various warning fixes.

2013-09-11 Riccardo Mottola <rm@gnu.org>

	* Input/NetclassesInput/main.m
	* Output/GNUstepOutput/Controllers/InputController.m
	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerCtcp.m
	* Source/commands.m
	* TalkSoupBundles/TalkSoup.h